--- a/src/main/webapp/resources/css/headerfooter.css
+++ b/src/main/webapp/resources/css/headerfooter.css
@@ -11,7 +11,7 @@
 	width: 1024px;
 }
 .nav-bar {
-	background-color: #FF0000;
+	background-color: #0000FF;
   padding-right: 0px;
   padding-left: 0px;
   font-family: Arial, Helvetica, sans-serif;
